--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,6 @@ article span {
 .icons div {
     width: 95%;
     padding: 20px;
-    border: 1px solid #e8e8e8;
     border-radius: 10px;
 }
 
@@ -343,14 +342,13 @@ nav ul li {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 20px 0;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 20px 20px;
   grid-template-areas:
-    ". ."
-    ". ."
-    ". .";
+    ". . .";
 }
+
 
 
 
